RESOLVED FIXED129256
REGRESSION(r164438): [GTK] Tests /WebKitGtk/testcontextmenu, /WebKitGtk/testmimehandling, /WebKitGtk/testloading assert in Debug build
https://bugs.webkit.org/show_bug.cgi?id=129256
Summary REGRESSION(r164438): [GTK] Tests /WebKitGtk/testcontextmenu, /WebKitGtk/testm...
Enrique Ocaña
Reported 2014-02-24 06:56:25 PST
TEST: ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testcontextmenu... (pid=20429) SHOULD NEVER BE REACHED ../../Source/WebKit/gtk/WebCoreSupport/FrameLoaderClientGtk.cpp(143) : int WebKit::toWebKitNetworkError(int) 1 0x7f20e86ca46a /home/enrique/WebKit/WebKitBuild/Debug/.libs/libjavascriptcoregtk-3.0.so.0(WTFCrash+0x1e) [0x7f20e86ca46a] 2 0x7f20eb13c4bb /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(+0x18004bb) [0x7f20eb13c4bb] 3 0x7f20eb139628 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN6WebKit17FrameLoaderClient22dispatchDidFailLoadingEPN7WebCore14DocumentLoaderEmRKNS1_13ResourceErrorE+0xd8) [0x7f20eb139628] 4 0x7f20ebb54914 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore20ResourceLoadNotifier13didFailToLoadEPNS_14ResourceLoaderERKNS_13ResourceErrorE+0xc0) [0x7f20ebb54914] 5 0x7f20ebb53894 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore14ResourceLoader15cleanupForErrorERKNS_13ResourceErrorE+0x9c) [0x7f20ebb53894] 6 0x7f20ebb5e60c /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore17SubresourceLoader7didFailERKNS_13ResourceErrorE+0x1ba) [0x7f20ebb5e60c] 7 0x7f20ebb53f2f /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore14ResourceLoader7didFailEPNS_14ResourceHandleERKNS_13ResourceErrorE+0x5f) [0x7f20ebb53f2f] 8 0x7f20ec4a6ee0 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(+0x2b6aee0) [0x7f20ec4a6ee0] 9 0x7f20e676d6fb /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0(+0x806fb) [0x7f20e676d6fb] 10 0x7f20e676d719 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0(+0x80719) [0x7f20e676d719] 11 0x7f20effa5aa5 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(g_main_context_dispatch+0x135) [0x7f20effa5aa5] 12 0x7f20effa5de8 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x48de8) [0x7f20effa5de8] 13 0x7f20effa624a /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(g_main_loop_run+0x6a) [0x7f20effa624a] 14 0x402635 ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testcontextmenu() [0x402635] 15 0x7f20effc9409 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x6c409) [0x7f20effc9409] 16 0x7f20effc95ce /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x6c5ce) [0x7f20effc95ce] 17 0x7f20effc95ce /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x6c5ce) [0x7f20effc95ce] 18 0x7f20effc991b /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(g_test_run_suite+0x17b) [0x7f20effc991b] 19 0x402c15 ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testcontextmenu(main+0x162) [0x402c15] 20 0x7f20e8eb876d /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xed) [0x7f20e8eb876d] 21 0x4018f9 ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testcontextmenu() [0x4018f9] GTester: last random seed: R02S39a41cfc2a24a4eec99afdb608a11e0c (pid=20441) LEAK: 14 RenderObject LEAK: 3 Page LEAK: 3 Frame LEAK: 18 WebCoreNode FAIL: ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testcontextmenu [...] TEST: ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testwebinspector... (pid=20509) SHOULD NEVER BE REACHED ../../Source/WebKit/gtk/WebCoreSupport/FrameLoaderClientGtk.cpp(143) : int WebKit::toWebKitNetworkError(int) 1 0x7fadbec2746a /home/enrique/WebKit/WebKitBuild/Debug/.libs/libjavascriptcoregtk-3.0.so.0(WTFCrash+0x1e) [0x7fadbec2746a] 2 0x7fadc168d4bb /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(+0x18004bb) [0x7fadc168d4bb] 3 0x7fadc168a628 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN6WebKit17FrameLoaderClient22dispatchDidFailLoadingEPN7WebCore14DocumentLoaderEmRKNS1_13ResourceErrorE+0xd8) [0x7fadc168a628] 4 0x7fadc20a5914 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore20ResourceLoadNotifier13didFailToLoadEPNS_14ResourceLoaderERKNS_13ResourceErrorE+0xc0) [0x7fadc20a5914] 5 0x7fadc20a4894 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore14ResourceLoader15cleanupForErrorERKNS_13ResourceErrorE+0x9c) [0x7fadc20a4894] 6 0x7fadc20af60c /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore17SubresourceLoader7didFailERKNS_13ResourceErrorE+0x1ba) [0x7fadc20af60c] 7 0x7fadc20a4f2f /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore14ResourceLoader7didFailEPNS_14ResourceHandleERKNS_13ResourceErrorE+0x5f) [0x7fadc20a4f2f] 8 0x7fadc29f7ee0 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(+0x2b6aee0) [0x7fadc29f7ee0] 9 0x7fadbccb56fb /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0(+0x806fb) [0x7fadbccb56fb] 10 0x7fadbccb5719 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0(+0x80719) [0x7fadbccb5719] 11 0x7fadc6577aa5 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(g_main_context_dispatch+0x135) [0x7fadc6577aa5] 12 0x7fadc6577de8 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x48de8) [0x7fadc6577de8] 13 0x7fadc657824a /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(g_main_loop_run+0x6a) [0x7fadc657824a] 14 0x401b6c ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testwebinspector() [0x401b6c] 15 0x7fadc659b409 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x6c409) [0x7fadc659b409] 16 0x7fadc659b5ce /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x6c5ce) [0x7fadc659b5ce] 17 0x7fadc659b5ce /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x6c5ce) [0x7fadc659b5ce] 18 0x7fadc659b91b /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(g_test_run_suite+0x17b) [0x7fadc659b91b] 19 0x401c51 ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testwebinspector(main+0x59) [0x401c51] 20 0x7fadbf41576d /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xed) [0x7fadbf41576d] 21 0x4013a9 ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testwebinspector() [0x4013a9] GTester: last random seed: R02Sec8cc369d44bd94a5dd22ffe527b2e14 (pid=20525) FAIL: ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testwebinspector [...] TEST: ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testmimehandling... (pid=20527) SHOULD NEVER BE REACHED ../../Source/WebKit/gtk/WebCoreSupport/FrameLoaderClientGtk.cpp(143) : int WebKit::toWebKitNetworkError(int) 1 0x7f2ea7dec46a /home/enrique/WebKit/WebKitBuild/Debug/.libs/libjavascriptcoregtk-3.0.so.0(WTFCrash+0x1e) [0x7f2ea7dec46a] 2 0x7f2eaaae24bb /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(+0x18004bb) [0x7f2eaaae24bb] 3 0x7f2eaaadf8ce /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN6WebKit17FrameLoaderClient19dispatchDidFailLoadERKN7WebCore13ResourceErrorE+0xac) [0x7f2eaaadf8ce] 4 0x7f2eaaadf820 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN6WebKit17FrameLoaderClient30dispatchDidFailProvisionalLoadERKN7WebCore13ResourceErrorE+0x30) [0x7f2eaaadf820] 5 0x7f2eab4ae6a0 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore11FrameLoader29checkLoadCompleteForThisFrameEv+0x22e) [0x7f2eab4ae6a0] 6 0x7f2eab4af6a5 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore11FrameLoader17checkLoadCompleteEv+0x151) [0x7f2eab4af6a5] 7 0x7f2eab4b0b79 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore11FrameLoader25receivedMainResourceErrorERKNS_13ResourceErrorE+0x18b) [0x7f2eab4b0b79] 8 0x7f2eab48f02c /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore14DocumentLoader17mainReceivedErrorERKNS_13ResourceErrorE+0x17a) [0x7f2eab48f02c] 9 0x7f2eab48f5fd /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore14DocumentLoader14notifyFinishedEPNS_14CachedResourceE+0x199) [0x7f2eab48f5fd] 10 0x7f2eab47089c /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore14CachedResource11checkNotifyEv+0x68) [0x7f2eab47089c] 11 0x7f2eab470a0f /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore14CachedResource5errorENS0_6StatusE+0x93) [0x7f2eab470a0f] 12 0x7f2eab5045f9 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore17SubresourceLoader7didFailERKNS_13ResourceErrorE+0x1a7) [0x7f2eab5045f9] 13 0x7f2eab4f9f2f /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore14ResourceLoader7didFailEPNS_14ResourceHandleERKNS_13ResourceErrorE+0x5f) [0x7f2eab4f9f2f] 14 0x7f2eabe4cee0 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(+0x2b6aee0) [0x7f2eabe4cee0] 15 0x7f2ea8d406fb /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0(+0x806fb) [0x7f2ea8d406fb] 16 0x7f2ea8d40719 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0(+0x80719) [0x7f2ea8d40719] 17 0x7f2ea8bddaa5 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(g_main_context_dispatch+0x135) [0x7f2ea8bddaa5] 18 0x7f2ea8bddde8 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x48de8) [0x7f2ea8bddde8] 19 0x7f2ea8bde24a /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(g_main_loop_run+0x6a) [0x7f2ea8bde24a] 20 0x4020f5 ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testmimehandling() [0x4020f5] 21 0x7f2ea8c01409 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x6c409) [0x7f2ea8c01409] 22 0x7f2ea8c015ce /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x6c5ce) [0x7f2ea8c015ce] 23 0x7f2ea8c015ce /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x6c5ce) [0x7f2ea8c015ce] 24 0x7f2ea8c0191b /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(g_test_run_suite+0x17b) [0x7f2ea8c0191b] 25 0x402267 ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testmimehandling(main+0x15f) [0x402267] 26 0x7f2ea85da76d /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xed) [0x7f2ea85da76d] 27 0x401819 ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testmimehandling() [0x401819] GTester: last random seed: R02Sa60e43d9f0d9b438a7df3e620ecab398 (pid=20539) FAIL: ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testmimehandling [...] TEST: ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testloading... (pid=20552) SHOULD NEVER BE REACHED ../../Source/WebKit/gtk/WebCoreSupport/FrameLoaderClientGtk.cpp(143) : int WebKit::toWebKitNetworkError(int) 1 0x7f981a26846a /home/enrique/WebKit/WebKitBuild/Debug/.libs/libjavascriptcoregtk-3.0.so.0(WTFCrash+0x1e) [0x7f981a26846a] 2 0x7f981cdf94bb /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(+0x18004bb) [0x7f981cdf94bb] 3 0x7f981cdf68ce /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN6WebKit17FrameLoaderClient19dispatchDidFailLoadERKN7WebCore13ResourceErrorE+0xac) [0x7f981cdf68ce] 4 0x7f981cdf6820 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN6WebKit17FrameLoaderClient30dispatchDidFailProvisionalLoadERKN7WebCore13ResourceErrorE+0x30) [0x7f981cdf6820] 5 0x7f981d7c56a0 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore11FrameLoader29checkLoadCompleteForThisFrameEv+0x22e) [0x7f981d7c56a0] 6 0x7f981d7c66a5 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore11FrameLoader17checkLoadCompleteEv+0x151) [0x7f981d7c66a5] 7 0x7f981d7c7b79 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore11FrameLoader25receivedMainResourceErrorERKNS_13ResourceErrorE+0x18b) [0x7f981d7c7b79] 8 0x7f981d7a602c /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore14DocumentLoader17mainReceivedErrorERKNS_13ResourceErrorE+0x17a) [0x7f981d7a602c] 9 0x7f981d7a65fd /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore14DocumentLoader14notifyFinishedEPNS_14CachedResourceE+0x199) [0x7f981d7a65fd] 10 0x7f981d78789c /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore14CachedResource11checkNotifyEv+0x68) [0x7f981d78789c] 11 0x7f981d787a0f /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore14CachedResource5errorENS0_6StatusE+0x93) [0x7f981d787a0f] 12 0x7f981d81b5f9 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore17SubresourceLoader7didFailERKNS_13ResourceErrorE+0x1a7) [0x7f981d81b5f9] 13 0x7f981d810f2f /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore14ResourceLoader7didFailEPNS_14ResourceHandleERKNS_13ResourceErrorE+0x5f) [0x7f981d810f2f] 14 0x7f981e163ee0 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(+0x2b6aee0) [0x7f981e163ee0] 15 0x7f981840f6fb /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0(+0x806fb) [0x7f981840f6fb] 16 0x7f981840fede /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0(+0x80ede) [0x7f981840fede] 17 0x7f9821db88cd /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libsoup-2.4.so.1(+0x678cd) [0x7f9821db88cd] 18 0x7f981840f6fb /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0(+0x806fb) [0x7f981840f6fb] 19 0x7f981840fede /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0(+0x80ede) [0x7f981840fede] 20 0x7f9821dbb4e3 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libsoup-2.4.so.1(+0x6a4e3) [0x7f9821dbb4e3] 21 0x7f9821dbfdf2 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libsoup-2.4.so.1(+0x6edf2) [0x7f9821dbfdf2] 22 0x7f9821dc0dcd /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libsoup-2.4.so.1(+0x6fdcd) [0x7f9821dc0dcd] 23 0x7f981b059aa5 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(g_main_context_dispatch+0x135) [0x7f981b059aa5] 24 0x7f981b059de8 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x48de8) [0x7f981b059de8] 25 0x7f981b05a24a /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(g_main_loop_run+0x6a) [0x7f981b05a24a] 26 0x40216d ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testloading() [0x40216d] 27 0x7f981b07d409 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x6c409) [0x7f981b07d409] 28 0x7f981b07d5ce /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x6c5ce) [0x7f981b07d5ce] 29 0x7f981b07d5ce /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x6c5ce) [0x7f981b07d5ce] 30 0x7f981b07d91b /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(g_test_run_suite+0x17b) [0x7f981b07d91b] 31 0x402cca ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testloading(main+0x16d) [0x402cca] GTester: last random seed: R02S40e6066de149f0adbcfce70e73705376 (pid=20563) LEAK: 2 CachedResource FAIL: ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testloading [...] TEST: ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testhittestresult... (pid=20604) SHOULD NEVER BE REACHED ../../Source/WebKit/gtk/WebCoreSupport/FrameLoaderClientGtk.cpp(143) : int WebKit::toWebKitNetworkError(int) 1 0x7fa07c31146a /home/enrique/WebKit/WebKitBuild/Debug/.libs/libjavascriptcoregtk-3.0.so.0(WTFCrash+0x1e) [0x7fa07c31146a] 2 0x7fa07ed834bb /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(+0x18004bb) [0x7fa07ed834bb] 3 0x7fa07ed80628 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN6WebKit17FrameLoaderClient22dispatchDidFailLoadingEPN7WebCore14DocumentLoaderEmRKNS1_13ResourceErrorE+0xd8) [0x7fa07ed80628] 4 0x7fa07f79b914 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore20ResourceLoadNotifier13didFailToLoadEPNS_14ResourceLoaderERKNS_13ResourceErrorE+0xc0) [0x7fa07f79b914] 5 0x7fa07f79a894 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore14ResourceLoader15cleanupForErrorERKNS_13ResourceErrorE+0x9c) [0x7fa07f79a894] 6 0x7fa07f7a560c /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore17SubresourceLoader7didFailERKNS_13ResourceErrorE+0x1ba) [0x7fa07f7a560c] 7 0x7fa07f79af2f /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(_ZN7WebCore14ResourceLoader7didFailEPNS_14ResourceHandleERKNS_13ResourceErrorE+0x5f) [0x7fa07f79af2f] 8 0x7fa0800edee0 /home/enrique/WebKit/WebKitBuild/Debug/.libs/libwebkitgtk-3.0.so.0(+0x2b6aee0) [0x7fa0800edee0] 9 0x7fa07a3b46fb /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0(+0x806fb) [0x7fa07a3b46fb] 10 0x7fa07a3b4719 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libgio-2.0.so.0(+0x80719) [0x7fa07a3b4719] 11 0x7fa083becaa5 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(g_main_context_dispatch+0x135) [0x7fa083becaa5] 12 0x7fa083becde8 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x48de8) [0x7fa083becde8] 13 0x7fa083bed24a /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(g_main_loop_run+0x6a) [0x7fa083bed24a] 14 0x401abe /home/enrique/WebKit/WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/.libs/testhittestresult() [0x401abe] 15 0x7fa083c10409 /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x6c409) [0x7fa083c10409] 16 0x7fa083c105ce /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x6c5ce) [0x7fa083c105ce] 17 0x7fa083c105ce /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(+0x6c5ce) [0x7fa083c105ce] 18 0x7fa083c1091b /home/enrique/WebKit/WebKitBuild/Dependencies/Root/lib64/libglib-2.0.so.0(g_test_run_suite+0x17b) [0x7fa083c1091b] 19 0x401be7 /home/enrique/WebKit/WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/.libs/testhittestresult(main+0x127) [0x401be7] 20 0x7fa07caff76d /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xed) [0x7fa07caff76d] 21 0x401309 /home/enrique/WebKit/WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/.libs/testhittestresult() [0x401309] GTester: last random seed: R02Sda866401f5a1383e559f05508b7d0b5e (pid=20626) LEAK: 4 WebCoreNode FAIL: ./Tools/gtk/../../WebKitBuild/Debug/Programs/TestWebKitAPI/WebKitGtk/testhittestresult [...]
Attachments
Patch (1.54 KB, patch)
2014-02-24 07:01 PST, Enrique Ocaña
no flags
Enrique Ocaña
Comment 1 2014-02-24 07:01:11 PST
Enrique Ocaña
Comment 2 2014-02-24 07:05:55 PST
The root cause of this bug is related to the root cause of #129252, but this time in WK1.
WebKit Commit Bot
Comment 3 2014-02-24 11:17:46 PST
Comment on attachment 225063 [details] Patch Clearing flags on attachment: 225063 Committed r164596: <http://trac.webkit.org/changeset/164596>
WebKit Commit Bot
Comment 4 2014-02-24 11:17:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.