REGRESSION(r164438): [GTK] Tests /WebKitGtk/testcontextmenu, /WebKitGtk/testmimehandling, /WebKitGtk/testloading assert in Debug build https://bugs.webkit.org/show_bug.cgi?id=129256

Patch by Enrique Ocaña González <eocanha@igalia.com> on 2014-02-24
Reviewed by Carlos Garcia Campos.

* WebCoreSupport/FrameLoaderClientGtk.cpp: Manage error values not present in WebCore
(WebKit::toWebKitNetworkError):

Canonical link: https://commits.webkit.org/147304@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164596 268f45cc-cd09-0410-ab3c-d52691b4dbfc